# netdash

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  pytest.ini  requirements.txt  run.sh
debian/: changelog  control  copyright  rules
netdash/: __init__.py  __main__.py  container_monitor.py  cpu_monitor.py  dashboard.py  disk_usage.py  log_monitor.py  login_tracker.py  memory_monitor.py  network_stats.py  ports_monitor.py  security_monitor.py  service_manager.py  socket_tracker.py  system_health.py  vm_monitor.py
tests/: test_cpu_monitor.py  test_disk_usage.py  test_log_monitor.py  test_login_tracker.py  test_memory_monitor.py  test_network_stats.py  test_service_manager.py  test_socket_tracker.py  test_system_health.py
tools/: generate_sample_log.py
