[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netdash"
version = "0.1.0"
description = "A modular Linux terminal tool for network monitoring, user login tracking, and log-based alerts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "textual>=0.36.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "typer>=0.9.0",
    "pytest>=7.0.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
netdash = "netdash.__main__:main"

[tool.setuptools]
packages = ["netdash"]
